# nfl-data-loader

./: README.md  pyproject.toml  release.py
.github/workflows/: publish.yml  run_tests.yml
nfl_data_loader/: __init__.py
nfl_data_loader/api/feature_stores/events/: events.py
nfl_data_loader/api/feature_stores/players/: player_regular_season_game.py
nfl_data_loader/api/sources/events/elo/: elo.py
nfl_data_loader/api/sources/events/games/: games.py
nfl_data_loader/api/sources/events/pbp/: pbp.py
nfl_data_loader/api/sources/players/boxscores/: boxscores.py
nfl_data_loader/api/sources/players/general/: combine.py  players.py
nfl_data_loader/api/sources/players/injuries/: injuries.py
nfl_data_loader/api/sources/players/rosters/: rosters.py
nfl_data_loader/schemas/events/: features.py
nfl_data_loader/schemas/general/: general.py
nfl_data_loader/schemas/players/: espn_id_mapper.py  madden.py  position.py
nfl_data_loader/utils/: utils.py
nfl_data_loader/utils/formatters/: reformat_team_name.py
nfl_data_loader/workflows/components/events/: game.py
nfl_data_loader/workflows/components/players/: fantasy.py  rating.py  state.py  weekly_stats.py
nfl_data_loader/workflows/components/players/classes/: career_player_rating.py  player_rating_matrix.py  (+4 more)
nfl_data_loader/workflows/components/teams/: team.py
nfl_data_loader/workflows/transforms/events/: epa.py  game.py  penalty.py  play.py  ranks.py  score.py  vegas_lines.py
nfl_data_loader/workflows/transforms/general/: averages.py  general.py
nfl_data_loader/workflows/transforms/players/: player.py
(+8 files in other folders)
